refactor: 생성자와 set 코드 리팩터링